picasaPhotos Changelog
	
Current Version : 0.9.1

*** 0.9.1 ***

Use image description when available

*** 0.9.0 ***

Fix for photos with width greater than 2048

*** 0.8.9 ***

Maps now at 720p

*** 0.8.8 ***

Enable display in hi-res when viewing photos

*** 0.8.7 ***

Handle videos
Fix a bug where some private images would not show even when privacy filter allowed private

*** 0.8.6 ***

Changes for Eden
Fixed captcha bug

*** 0.8.5 ***

Added 'Use Login' setting to enable/disable logins (Allows just browsing public photos and works around Windows SSL bug)

*** 0.8.4 ***

Added the ability to set view defaults from context menu

*** 0.8.3 ***

Added ability to filter by privacy level

*** 0.8.2 ***

Fixed bug when fetching contacts images
Added Dutch language strings thaks to Michel de Bokx

*** 0.8.1 ***

Bug Fix: Added elementtree import to addon.xml

*** 0.8.0 ***

Initial release